rename and CVS-move of bsw-shell/bswshell to shell/bsesh.
Mon Mar 10 05:43:37 2003  Tim Janik  <timj@gtk.org>

        * rename and CVS-move of bsw-shell/bswshell to shell/bsesh.

        * shell/bsescminterp.h: moved here from bsw-shell/bswscminterp.h.
        * shell/bsescminterp.c: moved here from bsw-shell/bswscminterp.c.
        * shell/bsesh.c: moved here from bsw-shell/bswshell.c.

        * shell/test.scm:
        * shell/Makefile.am:
        * shell/record-midi.scm:
        * shell/bse-scm-glue.boot:
        * shell/progressor-example.scm: moved here from bsw-shell/.

        * bse/bsescripthelper.c:
        * configure.in:
        * Makefile.am:
        * shell/*: adaptions to renames.

svn path=/trunk/; revision=962

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@
 ## Makefile.am for BEAST/BSE
 
 # subdirs with source code to be compiled
-SRC_SUBDIRS = sfi bse plugins bsw bsw-shell beast-gtk
+SRC_SUBDIRS = sfi bse plugins bsw shell beast-gtk
 
 # other subdirs
 SUBDIRS = . $(SRC_SUBDIRS) docs test
@@ -24,8 +24,8 @@ PKG_paths.h: $(top_srcdir)/configure Makefile
 	&& echo "/* Generated data from $< (by make $@) */" > xgen-pph \
 	&& echo >> xgen-pph \
 	&& echo "#define BSE_PATH_PLUGINS      \"${bseplugindir}\"" >> xgen-pph \
-	&& echo "#define BSW_PATH_SCRIPTS      \"${bswscriptdir}\"" >> xgen-pph \
-	&& echo "#define BSW_PATH_BINARIES     \"${bindir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_SCRIPTS      \"${bsescriptdir}\"" >> xgen-pph \
+	&& echo "#define BSE_PATH_BINARIES     \"${bindir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_DOCS         \"${beastdocsdir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_IMAGES       \"${beastimagesdir}\"" >> xgen-pph \
 	&& echo "#define BST_PATH_DATA_SAMPLES \"${beastsampledatadir}\"" >> xgen-pph \
