--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -1,14 +1,14 @@
-# BSW-SCM - Bedevilled Sound Engine Scheme Wrapper
-# Copyright (C) 2001-2002 Tim Janik
+# SHELL - Bedevilled Sound Engine Shell
+# Copyright (C) 2001-2003 Tim Janik
 #
-## Makefile.am for BSW-Shell
+## Makefile.am for bsesh
 
-INCLUDES = -I$(top_srcdir) -I. $(BSW_SHELL_CFLAGS) -DG_DISABLE_CONST_RETURNS
+INCLUDES = -I$(top_srcdir) -I. $(BSE_SHELL_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
 #
 # built sources
 #
-built_sources = # bswscm-genglue.c
+built_sources = # bsescm-genglue.c
 MAINTAINERCLEANFILES += $(built_sources)
 EXTRA_DIST += $(built_sources)
 # temporary build files
@@ -18,20 +18,20 @@ CLEANFILES += $(gen_sources)
 #
 # programs to build
 #
-bin_PROGRAMS = bswshell
+bin_PROGRAMS = bsesh
 # libraries to link programs against
 programs_ldadd = $(top_builddir)/bsw/libbsw.la $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 # source setups
-bswshell_SOURCES = bswshell.c bswscminterp.c
-bswshell_LDADD = $(programs_ldadd) $(BSW_SHELL_LIBS)
-bswscminterp.c: # bswscm-genglue.c
-EXTRA_DIST += bswscminterp.h
+bsesh_SOURCES = bsesh.c bsescminterp.c
+bsesh_LDADD = $(programs_ldadd) $(BSE_SHELL_LIBS)
+bsescminterp.c: # bsescm-genglue.c
+EXTRA_DIST += bsescminterp.h
 
 
 #
 # scripts
 #
-scriptdir = $(bswscriptdir)
+scriptdir = $(bsescriptdir)
 script_DATA = $(public_scripts)
 public_scripts = $(strip	\
 	bse-scm-glue.boot	\
