--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -5,7 +5,7 @@
 
 SUBDIRS =
 
-INCLUDES += -I${top_srcdir} $(SFI_CFLAGS) -I.
+INCLUDES += -I${top_srcdir} -I$(top_builddir) $(SFI_CFLAGS)
 
 # supported defines: SFI_DISABLE_DEBUG
 
