added @DVLBUILD@ ac substitution to disable development build rules.
Mon Mar 10 08:54:23 2003  Tim Janik  <timj@gtk.org>

        * configure.in: added @DVLBUILD@ ac substitution to disable
        development build rules.

        * */Makefile.am: more srcdir!=builddir fixes, adaptions to @DVLBUILD@.

svn path=/trunk/; revision=970

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@ AUTOMAKE_OPTIONS = 1.4
 configure: acbeast.m4
 
 # build PKG_paths.h
-PKG_paths.h: $(top_srcdir)/configure Makefile
+PKG_paths.h: $(top_builddir)/config.status Makefile
 	cd $(top_builddir) \
 	&& echo "/* Generated data from $< (by make $@) */" > xgen-pph \
 	&& echo >> xgen-pph \
