remove topdir gsl/ link, fixed includes.
Mon Mar 10 09:24:27 2003  Tim Janik  <timj@gtk.org>

        * remove topdir gsl/ link, fixed includes.

svn path=/trunk/; revision=971

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,16 +37,9 @@ PKG_paths.h: $(top_builddir)/config.status Makefile
 #	&& (cmp -s xgen-pph $@ || cp xgen-pph $@) 
 
 # always built PKG_paths.h and create links
-stamp-h: PKG_paths.h gsl
-
-# create builddir links
-gsl:
-	ln -s bse gsl
-# dist ship the srcdir links
-EXTRA_DIST += gsl
+stamp-h: PKG_paths.h
 
 CLEANFILES += PKG_paths.h
-MAINTAINERCLEANFILES += gsl
 
 EXTRA_DIST += \
 	TODO \
