fix inclusions and add elaborate comment
svn path=/trunk/; revision=973

--- a/bsw/Makefile.am
+++ b/bsw/Makefile.am
@@ -5,7 +5,7 @@
 
 # SUBDIRS = # icons
 
-INCLUDES = -I$(top_srcdir) -I. $(BSE_CFLAGS) -DG_DISABLE_CONST_RETURNS
+INCLUDES = -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
 #
 # libraries to compile and install
