--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -5,7 +5,7 @@
 
 SUBDIRS =
 
-INCLUDES = -I${top_srcdir} -I. -I.. $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
+INCLUDES = -I$(top_srcdir) -I$(top_builddir) -I$(top_srcdir)/beast-gtk $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
 
 DEFS += $(strip \
 	-DGTK_DISABLE_COMPAT_H \
