up version to 0.5.0-rc1, released rc tarball.
Tue Mar 11 06:46:19 2003  Tim Janik  <timj@gtk.org>

        * configure.in: up version to 0.5.0-rc1, released rc tarball.

svn path=/trunk/; revision=982

--- a/beast-gtk/.cvsignore
+++ b/beast-gtk/.cvsignore
@@ -7,7 +7,6 @@ Makefile.in
 beast
 bstconfigpaths.h
 bstenum_arrays.c
-bstenum_arrays.stamp
 bstenum_list.c
 bstgentypes.c
 bstgentypes.h
@@ -18,4 +17,5 @@ bststest
 bstrtest
 tsmview
 scankeys
+stamp-bstenum_arrays.c
 stamp-ckeycheck
