applied patch from Junichi Uekawa <dancer@debian.org> which provides
Thu Mar 13 15:54:28 2003  Tim Janik  <timj@gtk.org>

        * configure.in: applied patch from Junichi Uekawa <dancer@debian.org>
        which provides --enable-devdsp and --enable-devmidi options to force
        driver builds for these devices, bypassing auto-detection.

        * beast-gtk/bsttrackview.c (bst_track_view_create_tree): fix synthesizer
        column.

        * beast-gtk/gxk/gxktexttools.[hc] (gxk_scroll_text_create): adjust
        default values and possible flag sets.

        * beast-gtk/*.c: fixed callers of gxk_scroll_text_create().

svn path=/trunk/; revision=988

--- a/configure.in
+++ b/configure.in
@@ -337,14 +337,22 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
     dnl OSS-Lite driver check
     AC_CHECK_HEADER(sys/soundcard.h, have_oss_header=yes, have_oss_header=no)
     result=
-    if test -c /dev/dsp ; then
+    AC_ARG_ENABLE([devdsp],
+	          [  --enable-devdsp         force enable /dev/dsp],
+                  [force_devdsp=yes; AC_MSG_WARN([Ignoring detection of /dev/dsp])],
+                  [force_devdsp=no])
+    if test x"${force_devdsp}" = "xyes" || test -c /dev/dsp ; then
 	bse_have_pcmdev=yes
         AC_DEFINE_UNQUOTED(BSE_PCM_DEVICE_CONF_OSS, "/dev/dsp")
         result="$result""PCM:/dev/dsp "
     else
         result="$result""PCM:none "
     fi
-    if test $have_oss_header = yes && test -c /dev/midi ; then
+    AC_ARG_ENABLE([devmidi],
+	          [  --enable-devmidi        force enable /dev/midi],
+                  [force_midi=yes; AC_MSG_WARN([Ignoring detection of /dev/midi])],
+                  [force_midi=no])
+    if test $have_oss_header = yes && ( test x"${force_midi}" = "xyes" || test -c /dev/midi ) ; then
         AC_DEFINE_UNQUOTED(BSE_MIDI_DEVICE_CONF_OSS, "/dev/midi")
         result="$result""MIDI:/dev/midi "
     else
