install gsl headers under bse/.
Thu Mar 13 21:30:14 2003  Tim Janik  <timj@gtk.org>

        * Makefile.am (gslincludedir): install gsl headers under bse/.

svn path=/trunk/; revision=995

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -381,7 +381,7 @@ all: # TAGS
 # --- GSL targets ---
 GSL_progs_ldadd = $(progs_LDADD)
 GSL_cc_dummy    =
-gslincludedir   = $(includedir)/gsl
+gslincludedir   = $(includedir)/bse
 include gslmakefile.inc
 
 
