--- a/configure.in
+++ b/configure.in
@@ -224,6 +224,8 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     bselibdir=\${libdir}/bse/v$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
     bseplugindir=$bselibdir/plugins
     AC_SUBST(bseplugindir)
+    bseladspadir=${libdir}/ladspa
+    AC_SUBST(bseladspadir)
 ])
 AC_DEFUN(AC_BSE_SHELL_REQUIREMENTS,
 [
