new object dumping PCM output to a WAV file.
Fri Apr 18 19:48:59 2003  Tim Janik  <timj@gtk.org>

        * bsepcmwriter.[hc]: new object dumping PCM output to a WAV file.

        * bsepcmmodule.c: route PCM data into a BsePcmWriter if given.

        * bseserver.[hc]: added WAV file name property and support for
        BsePcmWriter.

        * gslloader-wav.c: fixed WAV header file length check.

        * gsldatautils.[hc]:
        (gsl_wave_file_dump_header): new function to write out RIFF/WAVE
        headers, fixing up the file_length logic which was broken in
        gsl_data_handle_dump_wav().
        (gsl_wave_file_patch_length): new function to change the data length
        information in a RIFF/WAVE file after the header was written (changes
        file position pointer).
        (gsl_data_handle_dump): return normal errno.
        (gsl_data_handle_dump_wav): return normal errno, use
        gsl_wave_file_dump_header() to write the wav header.

        * bseproject.c (bse_project_store_bse): use bse_error_from_errno() to
        translate errno to BseErrorType.

svn path=/trunk/; revision=1034

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -59,7 +59,7 @@ bse_public_h_sources = $(strip \
 	bsesubinstrument.h	bsesubiport.h		bsesubkeyboard.h		bsesuboport.h \
 	bsesubsynth.h		bsesuper.h		bsetrack.h			bsetype.h \
 	bseutils.h		bsemidivoice.h		bsewave.h			bsewaveosc.h \
-	bsewaverepo.h		bseladspamodule.h \
+	bsewaverepo.h		bseladspamodule.h	bsepcmwriter.h \
 )
 # BSE header files that don't get installed
 bse_private_h_sources = $(strip \
@@ -82,7 +82,7 @@ bse_c_sources = $(strip \
 	bsesubinstrument.c	bsesubiport.c		bsesubkeyboard.c		bsesuboport.c \
 	bsesubsynth.c		bsesuper.c		bsetrack.c			bsetype.c \
 	bseutils.c		bsemidivoice.c		bsewave.c			bsewaveosc.c \
-	bsewaverepo.c		bseladspamodule.c \
+	bsewaverepo.c		bseladspamodule.c	bsepcmwriter.c \
 )
 # procedure sources
 bse_proc_sources = $(strip \
