added handling and setup of a popup_callback. renamed
Mon Apr 28 22:13:19 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkutils.[hc]:
        (gxk_tree_view_add_popup_column): added handling and setup of
        a popup_callback.
        renamed gxk_cell_editable_focus_out_handler() to
        gxk_cell_editable_is_focus_handler(), this function now handles
        focussing on notify::is-focus signal emissions.

        * beast-gtk/bsttrackview.c (track_view_synth_popup): handle popup
        of patch selection dialog.

        * beast-gtk/bsttrackroll.c (bst_track_roll_start_edit): handle
        editing aborts by catching notify::is-focus signals.

        * beast-gtk/bstitemview.c (bst_item_view_get_type): GType updates.

        * beast-gtk/gxk/gxkcellrendererpopup.[hc]: added popup signal. make
        popup button insensitive if no popup handler is present.
        (gxk_cell_renderer_popup_start_editing): don't chain to parent, but
        create the entry ourselves and handle editing aborts with
        gxk_cell_editable_is_focus_handler() on notify::is-focus.
        (gxk_cell_renderer_popup_dialog): new function to let the cell
        renderer popup and manage user supplied dialogs during edits.

svn path=/trunk/; revision=1060

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -45,7 +45,8 @@ beast_headers = $(strip \
 	bstusermessage.h	bstutils.h	bstwavedialog.h		bstwaveeditor.h	\
 	bstwavereposhell.h	bstwaveview.h	bstsongshell.h		bstxkb.h	\
 	bstzoomedwindow.h	glewidgets.h	bsttrackrollctrl.h	bstxframe.h	\
-	bstcatalog.h		bstdial.h	bstdefs.h bstmarshal.h \
+	bstcatalog.h		bstdial.h			\
+	bstmarshal.h bstdefs.h \
 )
 # BEAST c sources to build the program from
 beast_sources = $(strip \
@@ -62,7 +63,8 @@ beast_sources = $(strip \
 	bstusermessage.c	bstutils.c	bstwavedialog.c		bstwaveeditor.c	\
 	bstwavereposhell.c	bstwaveview.c	bstsongshell.c		bstxkb.c	\
 	bstzoomedwindow.c	glewidgets.c	bsttrackrollctrl.c	bstxframe.c	\
-	bstcatalog.c		bstdial.c	$(PROFILE_SOURCE) \
+	bstcatalog.c		bstdial.c			\
+	$(PROFILE_SOURCE) \
 )
 # BEAST sources that get included (don't have own .lo rules)
 beast_extra_sources = $(strip \
