removed checks for documentation generation tools and added a test for
Thu May  8 13:21:10 2003  Alper Ersoy  <dirt@gtk.org>

        * configure.in: removed checks for documentation generation
        tools and added a test for texitheque.

        * docs/Makefile.am: removed utils from $SUBDIRS, and
        teximacros.texi from $texi_docs.

        * docs/generated/Makefile.am: replaced most of the document
        generation functionality with texitheque.  removed navigation.xsl from
        site rules.

        * beast-gtk/Makefile.am: substituted scankeys with texitheque
        and removed all occurrences of scankeys.

        * beast-gtk/scankeys.c:
        * docs/teximacros.texi:
        * docs/generated/html.xsl:
        * docs/generated/man.xsl:
        * docs/generated/markup.xsl:
        * docs/generated/markup.dtd:
        * docs/generated/log2texi.sh:
        * docs/generated/navigation.xsl:
        * docs/generated/reference-filter.pl:
        * docs/generated/reference-index.xsl:
        * docs/generated/texinfo.dtd:
        * docs/utils/*: removed due to being deprecated by texitheque.

svn path=/trunk/; revision=1070

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -143,8 +143,8 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 	&& cp xgen-bmc bstmarshal.c \
 	&& rm -f xgen-bmc
 
-SCANKEYS=$(top_builddir)/beast-gtk/scankeys
-stamp-ckeycheck: @DVLBUILD@ scankeys $(beast_sources) $(beast_extra_sources)
+SCANKEYS=$(TEXITHEQUE) scankeys --
+stamp-ckeycheck: @DVLBUILD@ $(beast_sources) $(beast_extra_sources)
 	cd $(srcdir) \
 	&& $(SCANKEYS) --count --key CKEY --skipkeys catalog-en.c \
 	     --tmplstart '#error MISSING DOC KEYS:\n' \
@@ -154,7 +154,7 @@ stamp-ckeycheck: @DVLBUILD@ scankeys $(beast_sources) $(beast_extra_sources)
 beast_DEPENDENCIES += stamp-ckeycheck
 
 debug_key_globs = $(top_srcdir)/beast-gtk/*.[hc] $(top_srcdir)/bse/*.[hc] $(top_srcdir)/sfi/*.[hc]
-bstdebugkeys.defs: @DVLBUILD@ scankeys $(debug_key_globs)
+bstdebugkeys.defs: @DVLBUILD@ $(debug_key_globs)
 	cd $(srcdir) \
 	&& echo > xgen-bdkd \
 	&& grep -E 'sfi_debug_(keyfunc|test_key)' $(debug_key_globs) \
@@ -172,15 +172,11 @@ bstutils.c: bstdebugkeys.defs
 bin_PROGRAMS = beast
 beast_SOURCES = bstmain.c $(beast_sources)
 beast_LDADD = $(progs_LDADD)
-noinst_PROGRAMS = bststest tsmview scankeys
+noinst_PROGRAMS = bststest tsmview
 bststest_SOURCES = bststest.c bstutils.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
 tsmview_SOURCES = tsmview.c
 tsmview_LDADD = $(progs_LDADD)
-
-# scankeys
-scankeys_SOURCES = scankeys.c
-scankeys_LDADD = $(progs_LDADD)
 
 
 # extra deps
