--- a/configure.in
+++ b/configure.in
@@ -360,24 +360,11 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 ])
 AC_DEFUN(AC_DOC_REQUIREMENTS,
 [
-    AC_CHECK_PROGS(XMLMAKEINFO,makeinfo,)
-    REQUIRED_VERSION=4.3
-    AC_MSG_CHECKING([for makeinfo version >= $REQUIRED_VERSION])
-    version=`$XMLMAKEINFO --version 2>/dev/null | head -n 1`
-    MC_CHECK_VERSION($version, $REQUIRED_VERSION,
-        AC_MSG_RESULT(yes)
-    ,
-	XMLMAKEINFO=
-        AC_MSG_RESULT(no)
-    )
-    AC_SUBST(XMLMAKEINFO)
-    AC_CHECK_PROGS(XSLTPROC,xsltproc,)
-    AC_CHECK_PROGS(GROFF,groff,)
-    AC_CHECK_PROGS(SOELIM,soelim,)
-    AM_CONDITIONAL(IF_BUILDDOCS, test -n "$XSLTPROC" -a -n "$XMLMAKEINFO" -a \
-                                      -n "$GROFF" -a -n "$SOELIM" -a -z "$DVLBUILD")
+    PKG_CHECK_MODULES(TEXITHEQUE, texitheque >= 0.3)
+    AC_CHECK_PROGS(TEXITHEQUE, texitheque)
+    AM_CONDITIONAL(IF_BUILDDOCS, test -n "$TEXITHEQUE" -a -z "$DVLBUILD")
     if test "x$enable_devel_rules" = "xyes" -a -z "$IF_BUILDDOCS_FALSE" ; then
-	AC_MSG_ERROR([one of the devel tools (makeinfo, xsltproc, groff, soelim) is missing])
+       AC_MSG_ERROR([texitheque is required to build documentation])
     fi
 ])
 
@@ -478,7 +465,6 @@ beast-gtk/gxk/Makefile
 beast-gtk/icons/Makefile
 beast-gtk/images/Makefile
 docs/Makefile
-docs/utils/Makefile
 docs/generated/Makefile
 test/Makefile
 bse/bseconfig.h
