added SfiFileCrawler, a new mechanism to construct a file list for a given
Tue May  6 04:17:19 2003  Tim Janik  <timj@gtk.org>

        * sfifilecrawler.[hc]: added SfiFileCrawler, a new mechanism to
        construct a file list for a given search path incrementally.

svn path=/trunk/; revision=1073

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -21,7 +21,7 @@ libsfi_la_LDFLAGS = $(strip \
 libsfi_la_LIBADD = $(SFI_LIBS) -lm
 
 sfi_public_headers = $(strip \
-	sfistore.h	sficomwire.h	\
+	sfistore.h	sficomwire.h	sfifilecrawler.h \
 	glib-extra.h	\
 	sfivmarshal.h	sfiglue.h	sfigluecodec.h	sfiglueproxy.h	\
 	sfinote.h	sfiparams.h	sfiprimitives.h	sfiserial.h	\
@@ -30,7 +30,7 @@ sfi_public_headers = $(strip \
 	sfi.h	\
 )
 sfi_c_sources = $(strip \
-	sfistore.c	sficomwire.c	\
+	sfistore.c	sficomwire.c	sfifilecrawler.c \
 	glib-extra.c	\
 	sfivmarshal.c	sfiglue.c	sfigluecodec.c	sfiglueproxy.c	\
 	sfinote.c	sfiparams.c	sfiprimitives.c	sfiserial.c	\
